public enum CartaAccionTipo{
	PICO, ANTORCHA, MINECART,  VACIO
}
