package saboteadores.modelo.enums;

// Se deja de utilizar, se emplea herencia con genericos
public enum CartaTipo{
	//jugables en el tablero 
	CAMINO, CALLEJON, 
	DERRUMBE, ENTRADA, META, 
	// no jugables en el tablero 
	SABOTAJE, REPARACION, VISTA
}
