@startuml
hide empty members

enum CartaAccionTipo {
  PICO
  ANTORCHA
  MINECART
  VACIO
}

enum CartaTipo {
  CAMINO
  CALLEJON
  SABOTAJE
  REPARACION
  VISTA
  DERRUMBE
}

enum Rol {
  IMPOSTOR
  ENANO
}

class Controlador {
  - Tablero modelo
  - VistaTerminal vista
  + iniciar(): void
  + cargarJugadores(): void
  + menuDeCartas(): Carta
  + opciones(): void
  + actualizar(): void
}

class Jugador {
  - String nombre
  - ArrayList<Carta> mano
  - ArrayList<CartaSabotaje> restricciones
  - ArrayList<Carta_Oro> orosVistos
  - Rol rol
  + getManoJugador(): ArrayList<Carta>
  + getOrosJugador(): ArrayList<Carta_Oro>
  + getRestriccionesJugador(): ArrayList<CartaSabotaje>
  + getNombre(): String
  + getRol(): Rol
  + agregarRestriccion(Carta): boolean
  + quitarRestriccion(Carta): boolean
  + tieneRestricciones(): boolean
  + agregarOrosVistos(Carta): void
}

class Main {
  ~ Tablero tableroJuego
  ~ VistaTerminal vista
  ~ Controlador controlador
  + main(String[]): void
}

class VistaTerminal {
  - ArrayList<String> nombres
  - int MAX
  - int cartasRestantesMazo
  - Jugador jugador
  - Slots_Tablero tableroJuego
  + vistaPorDefecto(): void
  + iniciarJuego(): void
  + generarJugadores(): ArrayList<String>
  + actualizarTablero(Slots_Tablero): void
  + cartasRestantes(int): void
  + jugadorActual(Jugador): void
  - verJugadorActual(): void
  - verCartasJugador(): void
  - verOrosJugador(): void
  - verRestriccionesJugador(): void
  - verTablero(): void
  - verTableroConPosiciones(): void
  - verCantidadDeCartasRestantes(): void
  + menuDeCartas(): Carta
  + menuOpciones(): int
  + menuElegirJugador(): String
  + menuElegirOro(): int
  + menuJugarEnTablero(): int
  + introducirPosicion(): int
}

class Mazo {
  - ArrayList<Carta> mazo
  + addCallejonesYCaminos(): void
  + addAcciones(): void
  + getMazo(): ArrayList<Carta>
  + hayCartasEnElMazo(): boolean
  + getCarta(): Carta
  + getCantidadRestanteMazo(): int
}

class Mazo_oros {
  - ArrayList<Carta_Oro> mazo_oro
  - oros(): void
  + get_mazo_oros(): ArrayList<Carta_Oro>
}

class Carta {
  - CartaTipo tipo
  + getTipo(): CartaTipo
}

class CartaReparacion {
  - CartaAccionTipo reparacion1
  - CartaAccionTipo reparacion2
  + getReparacion1(): CartaAccionTipo
  + getReparacion2(): CartaAccionTipo
}

class CartaSabotaje {
  - CartaAccionTipo sabotaje
  + getAccion(): CartaAccionTipo
}

class Carta_Camino {
  - String forma
  - boolean arriba
  - boolean abajo
  - boolean izquierda
  - boolean derecha
  + getArriba(): boolean
  + getAbajo(): boolean
  + getIzquierda(): boolean
  + getDerecha(): boolean
  + getForma(): String
}

class Carta_Oro {
  - boolean oro
  - String forma
  + getOro(): boolean
  + getForma(): String
}

interface Observable {
  ~ agregarObservador(Observador): void
  ~ quitarObservador(Observador): void
  ~ notificarObservadores(): void
}

interface Observador {
  ~ actualizar(): void
}

class Slot {
  - Carta_Camino carta_alojada
  - boolean arriba
  - boolean abajo
  - boolean izquierda
  - boolean derecha
  - boolean ocupao
  - String forma
  + getTipo(): CartaTipo
  + taOcupao(): boolean
  + getCartaAlojadaEnSlot(): Carta_Camino
  + alojarCarta(Carta_Camino): void
  + eliminarCarta(): void
  + gA(): boolean
  + gB(): boolean
  + gI(): boolean
  + gD(): boolean
}

class Slots_tablero {
  - ArrayList<Slot> slots
  - ArrayList<Carta_Oro> mazo_oro
  - crear_slots(): void
  + getSlot(int): Slot
}

class Tablero {
  - List<Observador> observadores
  - boolean jugable
  - boolean esperandoAccion
  - Mazo mazo
  - Slots_tablero slots
  - ArrayList<Jugador> jugadores
  - Jugador jugadorActual
  - int turnoActual
  - ArrayList<String> jugadoresNuevos
  + agregarJugadores(ArrayList<String>): void
  + incializar(): void
  - inicializarJugadores(ArrayList<String>): void
  + iniciarJuego(): void
  + siguienteTurno(): void
  + ganarPartida(): void
  + quieroVerOro(Carta, int, String): void
  + getSlot(int): Slot
  + sePuedePoner(Carta_Camino, int): boolean
  + cartasConectorEsMeta(int): void
  + ponerCartaTablero(Carta, int, String): void
  + taOcupao(int): boolean
  + derrumbar(Carta, int, String): void
  + descartarCarta(Carta, String): void
  + getJugadorActual(): Jugador
  + getCantidadRestanteMazo(): int
  + borrarCartaYDarUnaNueva(Carta, String): void
  + ponerCartaSobreJugador(Carta, String, String): void
  + agregarObservador(Observador): void
  + quitarObservador(Observador): void
  + notificarObservadores(): void
}

Observador <|.. Controlador
Carta <|-- CartaReparacion
Carta <|-- CartaSabotaje
Carta <|-- Carta_Camino
Carta_Camino <|-- Carta_Oro
Observable <|.. Tablero
Controlador --> Tablero : tiene
Controlador --> VistaTerminal : tiene
Controlador --> Carta : conoce
Jugador --> Rol : utiliza
Jugador --> CartaSabotaje : utiliza
Jugador --> CartaReparacion : utliza
Jugador --> CartaSabotaje : utliza
Jugador --> Carta_Oro : utiliza
Main --> Tablero : instancia
Main --> VistaTerminal : instancia
Main --> Controlador : instancia 
VistaTerminal --> Jugador : jugador
VistaTerminal --> Slots_tablero : conoce
VistaTerminal --> Carta_Camino : conoce
VistaTerminal --> CartaReparacion : conoce
Mazo "1" --> "0..*"  Carta : utiliza
Mazo_oros "1" --> "3"  Carta_Oro : utiliza
Carta --> CartaTipo : utiliza
CartaReparacion --> CartaAccionTipo : utiliza
CartaSabotaje --> CartaAccionTipo : utiliza
Slots_tablero "1" --> "*" Slot : aloja
Slots_tablero "1" --> "1" Mazo_oros : tiene
Slot "1" --> "1" Carta_Camino : aloja
Tablero "1"-->"1" Mazo : tiene 
Tablero "1"--> "*" Slots_tablero : tiene
Tablero "1"-->"*" Jugador : tiene
Tablero --> Carta_Camino : conoce
Tablero --> Carta_Oro : conoce
Tablero --> Carta : conoce
Tablero --> CartaSabotaje : conoce
Tablero --> CartaReparacion : conoce 

@enduml
